--- a/.github/workflows/publish-tag.yml
+++ b/.github/workflows/publish-tag.yml
@@ -21,14 +21,16 @@ jobs:
       - uses: actions/checkout@v2
 
       - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
-      
+
       - uses: actions/checkout@v2
         if: ${{ steps.regex-match.outputs.match != '' }}
-        ref: tags/${{ github.event.inputs.version_name }}
+        with:
+         ref: ${{ github.event.inputs.version_name }}
         
       - uses: docker/build-push-action@v1.1.1
         if: ${{ steps.regex-match.outputs.match != '' }}
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          tags: hihiboss/github-action-docker-test:${{ github.event.inputs.version_name }}
+          repository: hihiboss/github-action-docker-test
+          tags: ${{ github.event.inputs.version_name }}
