--- a/.github/workflows/publish-tag.yml
+++ b/.github/workflows/publish-tag.yml
@@ -12,25 +12,14 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
-      - uses: actions-ecosystem/action-regex-match@v2
-        id: regex-match
-        with:
-          text: ${{ github.event.inputs.version_name }}
-          regex: '^v[0-9]+\.[0-9]+\.[0-9]+(\-[a-zA-Z]+\.[0-9]+)'
-
       - uses: actions/checkout@v2
-
-      - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
-
-      - uses: actions/checkout@v2
-        if: ${{ steps.regex-match.outputs.match != '' }}
         with:
          ref: ${{ github.event.inputs.version_name }}
         
       - uses: docker/build-push-action@v1.1.1
-        if: ${{ steps.regex-match.outputs.match != '' }}
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+          push: true
           repository: hihiboss/github-action-docker-test
           tags: ${{ github.event.inputs.version_name }}
